--- a/ipu/templates/company/mysessions.html
+++ b/ipu/templates/company/mysessions.html
@@ -6,7 +6,7 @@
 {% if sessions %}
 <ul class="collection col s8 offset-s2">
 	{% for session in sessions %}
-		<li class="collection-item avatar" data-sess="{{ session.sessid }}">
+		<li class="collection-item avatar" data-sess="{{ session.sess_hashid }}">
 			{% if session.photo %}
 				<img src="{{ session.photo.url }}" alt="College" class="circle" />
 			{% endif %}
@@ -21,9 +21,8 @@
 					{{ session.students }} student{{ session.students|pluralize }} in the session
 			</p>
 			<span class="secondary-content">
-				<a href="{% url 'edit_session' session.sessid %}"><i class="fa fa-2x fa-pencil"></i></a>
-				<a href="{% url 'edit_criteria' session.sessid %}"><i class="fa fa-2x fa-list-ol"></i></a>
-				<a href="{% url 'excel' session.sessid %}" class="excel"><i class="fa fa-2x fa-file-excel-o"></i></a>
+				<a href="{% url 'manage_session' session.sess_hashid %}"><i class="fa fa-2x fa-cogs"></i></a>
+				<a href="{% url 'excel' session.sess_hashid %}" class="excel"><i class="fa fa-2x fa-file-excel-o"></i></a>
 			</span>
 			
 		</li>
