--- a/ipu/templates/account/stats.html
+++ b/ipu/templates/account/stats.html
@@ -11,5 +11,12 @@
 {% endblock %}
 
 {% block main %}
-  <h2>Placement records</h2>
+ <div id="heading">
+  <h4>Placement records</h4>
+  </div>
+  <p>*This data is strictly hypothetical for now.</p>
+  <div id="images">
+  	<img src="{% static 'images/Placements-Stats.png' %}">
+  	<img src="{% static 'images/Placement-Stats2.jpg' %}">
+  </div>
 {% endblock %}
