--- a/ipu/templates/student/home.html
+++ b/ipu/templates/student/home.html
@@ -97,7 +97,7 @@
           Companies Visiting</a></li>
     <li><a class="waves-effect" href="#!"><i class="fa fa-clock-o" aria-hidden="true"></i>
             Sessions</a></li>
-    <li><a class="waves-effect" href="#!"><i class="fa fa-bell" aria-hidden="true"></i>Notifications</a></li>
+    <li><a class="waves-effect" href="#!"><i class="fa fa-bell" aria-hidden="true"></i>Notifications<span class="new badge" id="mobile-noti-badge">1</span></a></li>
     <li class="no-padding">
         <ul class="collapsible collapsible-accordion">
           <li>
