--- a/ipu/static/account/css/stats.css
+++ b/ipu/static/account/css/stats.css
@@ -2,3 +2,37 @@ html
 {
 	background:white;
 }
+
+#heading
+{
+	width: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+h4
+{
+	color: #1c262f;
+
+}
+
+p
+{
+	color: red;
+	margin-left: 10px;
+}
+
+#images
+{
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
+	padding: 20px;
+}
+
+#images img
+{
+	margin: 10px;
+}
