--- a/ipu/static/student/inactive.css
+++ b/ipu/static/student/inactive.css
@@ -1,6 +1,6 @@
 html {
     height: 100%;
-    background: url("gg3.jpg") no-repeat center fixed;
+    background: url("2.jpg") no-repeat center fixed;
     background-size: cover;
     color: white;
     padding: 0px;
@@ -19,5 +19,17 @@ main {
 
 h2,h3,p
 {
-    color: white;
+    color: #337ab7;
+}
+
+#main-box
+{
+	width: 50%;
+	height: 50%;
+	position: absolute;
+	top: 25%;
+	left: 25%;
+	background-color: #f2f2f2;
+	border-radius: 2%;
+	padding: 5px;
 }
