--- a/ipu/static/student/unverified.css
+++ b/ipu/static/student/unverified.css
@@ -1,6 +1,6 @@
 html {
-    height: 100%;
-    background: url("gg3.jpg") no-repeat center fixed;
+    min-height: 100%;
+    background: url("wall.jpg") no-repeat center;
     background-size: cover;
     color: white;
     padding: 0px;
@@ -9,10 +9,9 @@ html {
 
 body {
     min-height: 100%;
-    background: rgba(0, 0, 0, 0.6);
     padding: 50px;
     margin: 0px;
-    color: white;
+    color: black;
 }
 
 h4,h6,p
