--- a/ipu/templates/account/intro.html
+++ b/ipu/templates/account/intro.html
@@ -1,15 +1,189 @@
-{% extends 'account/nav-landing.html' %}
+<!DOCTYPE html>
 {% load staticfiles %}
+  <head>
+    
+    <title>Why GGSIPU</title>
+    <link href="{% static 'css/materialize/css/materialize.css' %}" type="text/css" rel="stylesheet" media="screen,projection">
+    <link href="{% static 'account/css/intro.css' %}" type="text/css" rel="stylesheet" media="screen,projection">
+    <link type="text/css" rel="stylesheet" href="{% static 'common/css/font-awesome/css/font-awesome.min.css' %}" />
+  </head>
+  <body>
+  
+<div id="corner-button">
+    <ul class="left hide-on-med-and-down">
+        <li><a href="{% url 'landing' %}"><i style="color: white;" class="fa fa-arrow-left fa-2x" aria-hidden="true"></i></a></li>
+    </ul>
+</div>
+
+<div id="teal" class="block indigo lighten-5">
+  <nav class="pushpin-demo-nav" data-target="teal">
+    <div class="nav-wrapper indigo darken-4">
+      <div class="container">
+        <a href="#" class="brand-logo">About University</a>
+      </div>
+    </div>
+  </nav>
+  <div id="data">
+  <img src="{% static 'images/ipu-logo.png' %}" height="100px" width="120px;">
+  <p style="padding: 10px;padding-top: 2px;font-size: 20px; padding-bottom: 0px;">
+
+<b>Guru Gobind Singh Indraprastha University (GGSIPU)</b> is first University established in 1998 by Govt. of NCT of Delhi under the provisions of Guru Gobind Singh Indraprastha University Act, 1998 read with its Amendment in 1999 The University is recognized by University Grants Commission (UGC), India under section 12B of UGC Act.
+
+ It is a teaching and affiliating University with the explicit objective of facilitating and promoting studies, research and extension work in emerging areas of higher education with focus on professional education, for example engineering, technology, management studies, medicine, pharmacy, nursing, education, law, etc. and also to achieve excellence in these and connected fields and other matters connected therewith or incidental thereto.
+
+In order to serve the broad purposes for which the University was established, it set out its statements of Vision, Mission and Quality Policy which read as thus : 
+</p>
+<ul style="display: flex;width: 80%;flex-direction: column;justify-content: flex-start;">
+      <li>Vision</li>
+      <li>Mission</li>
+      <li>Quality Policy</li>
+      <li>Campuses</li>
+      <li>Rules & Regulations</li>
+</ul>
+</div>
+</div>
+
+<div id="red" class="block blue lighten-4">
+  <nav class="pushpin-demo-nav" data-target="red">
+    <div class="nav-wrapper blue darken-4">
+      <div class="container">
+        <a href="#" class="brand-logo">Acadamics</a>
+      </div>
+    </div>
+  </nav>
+   <div id="data">
+   <div id="img-line">
+     <img src="{% static 'images/intro/aca.JPG' %}">
+   </div>
+  <p style="padding: 10px;padding-top: 2px;font-size: 20px; margin-top: 10px;">
+
+GGSIPU was established as an affiliating and teaching university to promote studies in the emerging areas of higher education. The university runs almost 50 courses of study as diverse as engineering, technology, business management, medicine, pharmacy, nursing, education, and law. There are more than 120 colleges affiliated to it which are run according to the rules and regulation set by the university.<br><br>
+<b>According to Times Ranking 2013 Indraprastha University is ranked 12th among the top universities of India.</b> University School of Law and Legal Studies also ranked amongst top 10 law school of the country. Faculty of Biotechnology of university-University School of Biotechnology is ranked sixth in the list of Premier Public Biotechnology Institutes of India.
+</p>
+</div>
+</div>
+
+<div id="green" class="block green lighten-4">
+  <nav class="pushpin-demo-nav" data-target="green">
+    <div class="nav-wrapper green darken-2">
+      <div class="container">
+        <a href="#" class="brand-logo">Beyond Acadamics</a>
+        <!--
+        <ul id="nav-mobile" class="right hide-on-med-and-down">
+          <li><a href="#!">Red Link 1</a></li>
+          <li><a href="#!">Red Link 2</a></li>
+          <li><a href="#!">Red Link 3</a></li>
+        </ul>
+        -->
+        
+      </div>
+    </div>
+  </nav>
+  <div id="data">
+   <div id="img-line">
+     <img src="{% static 'images/intro/sport.JPG' %}">
+   </div>
+  <p style="padding: 10px;padding-top: 2px;font-size: 20px; margin-top: 10px;">
+
+Every year IPU conducts a student sports meet. Events include 100m, 200m, 5k, 10k, powerlifing, bodybuilding, weightlifting and athletics.<br><br>
+The campus has all the facilities to play various sports like cricket, football, basketball, etc. The students have been representing the university at various levels of inter college sports competetions.
+</p>
+</div>
+</div>
 
 
+<div id="brown" class="block blue-grey lighten-4">
+  <nav class="pushpin-demo-nav" data-target="brown">
+    <div class="nav-wrapper blue-grey darken-2">
+      <div class="container">
+        <a href="#" class="brand-logo">Notable Alumini</a>
+        
+      </div>
+    </div>
+  </nav>
+  <div id="data">
+  <div id="boxes">
+    <div class="box">
+      <img src="{% static 'images/intro/taapsee-pannu.jpg' %}" class="circle responsive-img" height="30%" width="30%"> 
+      <h5>Taapsee Pannu</h5>
+    </div>
+    <div class="box">
+      <img src="{% static 'images/intro/index.jpeg' %}" class="circle responsive-img" height="30%" width="30%"> 
+      <h5>Gaurav Gogoi</h5>
+    </div>
+    <div class="box">
+      <img src="{% static 'images/intro/default.png' %}" class="circle responsive-img" height="30%" width="30%"> 
+      <h5>Akshay Takker</h5>
+    </div>
+    <div class="box">
+      <img src="{% static 'images/intro/default.png' %}" class="circle responsive-img" height="30%" width="30%"> 
+      <h5>Rohit Thakur</h5>
+    </div>
+  </div>
+  <div id="boxes">
+    <div class="box">
+      <img src="{% static 'images/intro/default.png' %}" class="circle responsive-img" height="30%" width="30%"> 
+      <h5>Aishwarya Uniyal</h5>
+    </div>
+    <div class="box">
+      <img src="{% static 'images/intro/default.png' %}" class="circle responsive-img" height="30%" width="30%"> 
+      <h5>Sandeep Tripathy</h5>
+    </div>
+    <div class="box">
+      <img src="{% static 'images/intro/default.png' %}" class="circle responsive-img" height="30%" width="30%"> 
+      <h5>Nitin Tora</h5>
+    </div>
+    <div class="box">
+      <img src="{% static 'images/intro/default.png' %}" class="circle responsive-img" height="30%" width="30%"> 
+      <h5>Jitender Kumar</h5>
+    </div>
+  </div>
+  <div id="boxes">
+    <div class="box">
+      <img src="{% static 'images/intro/default.png' %}" class="circle responsive-img" height="30%" width="30%"> 
+      <h5>Siddhant Sharma</h5>
+    </div>
+    <div class="box">
+      <img src="{% static 'images/intro/default.png' %}" class="circle responsive-img" height="30%" width="30%"> 
+      <h5>Madhav Batra</h5>
+    </div>
+    <div class="box">
+      <img src="{% static 'images/intro/default.png' %}" class="circle responsive-img" height="30%" width="30%"> 
+      <h5>Abhishek Nassa</h5>
+    </div>
+    <div class="box">
+      <img src="{% static 'images/intro/default.png' %}" class="circle responsive-img" height="30%" width="30%"> 
+      <h5>Anushka Toora</h5>
+    </div>
+  </div>
+            
+    
+  </div>
+</div>  
 
-{% block head %}
-  <link type="text/css" rel="stylesheet" href="{% static 'common/css/font-awesome/css/font-awesome.min.css' %}" />
-  <link type="text/css" rel="stylesheet" href="{% static 'materialize-blue.css' %}" />
-  <link type="text/css" rel="stylesheet" href="{% static 'account/css/landing.css' %}" />
-  <link type="text/css" rel="stylesheet" href="{% static 'account/css/intro.css' %}" />
-{% endblock %}
 
-{% block main %}
-  <h2>Why GGSIPU</h2>
-{% endblock %}
+    <!--  Scripts-->
+    <script src="{% static 'material/js/jquery-2.2.0.js' %}"></script>
+    <script src="{% static 'css/materialize/js/materialize.js' %}"></script>
+    <script type="text/javascript">
+      $(document).ready(function(){
+        $('.modal').modal();
+    $('.target').pushpin({
+      top: 0,
+      bottom: 1000,
+      offset: 0
+    });
+  });
+      $('.pushpin-demo-nav').each(function() {
+    var $this = $(this);
+    var $target = $('#' + $(this).attr('data-target'));
+    $this.pushpin({
+      top: $target.offset().top,
+      bottom: $target.offset().top + $target.outerHeight() - $this.height()
+    });
+  });
+    </script>
+   
+
+  </body>
+</html>
