--- a/ipu/templates/student/create.html
+++ b/ipu/templates/student/create.html
@@ -2,7 +2,17 @@
 {% load material_form %}
 {% block title %} Student | Sign Up {% endblock title %}
 {% block content %}
-	<a class="btn waves-effect waves-light blue right" href="{% url 'logout' %}">Logout</a>
+   <style type="text/css">
+   	html
+   	{
+   		background-color: #f2f2f2;
+   	}
+   	body
+   	{
+   		overflow-x: hidden;
+   	}
+   </style>
+	<a class="btn waves-effect waves-light blue" href="{% url 'logout' %}" style="position: fixed;top: 10px;right: 10px;z-index: 516516514;">Logout</a>
     <form enctype="multipart/form-data" action="{% url 'create_student' %}" method='POST' id='student-creation-form' >
         {% csrf_token %}
 		<div class="row">
