--- a/ipu/templates/student/unverified.html
+++ b/ipu/templates/student/unverified.html
@@ -4,7 +4,7 @@
 {% block title %} Unverified Student {% endblock %}
 {% block head %} <link type="text/css" rel="stylesheet" href="{% static 'student/unverified.css'%}"  media="screen,projection"/> {% endblock %}
 {% block content %}
-		<div class="row blue-text">
+		<div style="margin-top: -50px;" class="row blue-text">
 			<h4 class="col s6 offset-s3">You're Almost There, {{ student.firstname | title }}!</h4>
 			<br>
 			<h6 class="col s6 offset-s3">Now all you have to do is contact your college's Training &amp; Placement Cell for profile verification.</h6>
@@ -15,12 +15,12 @@
 				<div class="col s6 offset-s3">
 					<p>Meanwhile, you can fill your qualifications truely to speed up your verification process.</p>
 				</div>
-				<div class="col s12" id="qual-form-div">
+				<div style="margin-top: 70px;" class="col s8 offset-s2" id="qual-form-div">
 					<form method="POST" action="{% url 'student_qual' %}" id="qual-form">
 						{% csrf_token %}
 						{% form form=qual_form %}{% endform %}
 						<div class="row">
-							<div class="col s6 offset-s3">
+							<div style="margin-top: 50px;" class="col s6 offset-s3">
 								<button type="submit" class="btn btn-waves" style="width: 100%">Add Qualifications</button>
 							</div>
 						</div>
