--- a/ipu/templates/recruitment/manage_session.html
+++ b/ipu/templates/recruitment/manage_session.html
@@ -1,7 +1,7 @@
 {% extends 'account/navbar_with_tabs.html' %}
 {% load staticfiles %}
 {% load material_form %}
-{% block title %}Manage Dummy Company{% endblock %}
+{% block title %}Manage Placement Session{% endblock %}
 {% block home_url1 %}{{ home_url }}{% endblock %}
 {% block home_url2 %}{{ home_url }}{% endblock %}
 {% block home_url3 %}{{ home_url }}{% endblock %}
