--- a/ipu/templates/college/home.html
+++ b/ipu/templates/college/home.html
@@ -4,6 +4,7 @@
 
 {% block head %}
 <link type="text/css" rel="stylesheet" href="{% static 'college/home.css' %}" /> 
+<link rel="stylesheet" type="text/css" href="{% static 'sweetalert/dist/sweetalert.css' %}">
 
 {% endblock %}
 
@@ -41,14 +42,14 @@
 
 {% block lightbox_data %}
         <div id="light3" class="white_content3">
-            <h4 style="color: goldenrod;">Create Faculty</h4>
-				<form method='POST' action="{% url 'faculty_signup' %}" id='create-faculty-form'>
+			<h4 style="color: goldenrod;">Notify All Students</h4>
+			<form method='POST' action="#!" id="notify-session-students-form">
 					{% csrf_token %}
-					{% form form=create_faculty_form %}{% endform %}
+					{% form form=notify_session_students_form %}{% endform %}
 					<div class="row center">
-						<button class="btn btn-waves" style="width: 100%">Add Faculty</button>
+						<button class="btn btn-waves" style="width: 100%">Submit</button>
 					</div>
-				</form>
+			</form>
             <a href = "javascript:void(0)" onclick = "document.getElementById('light3').style.display='none'; document.getElementById('fade3').style.display='none'; "><i class="fa fa-times fa-2x"></i></a>
         </div>
         <div id="fade3" class="black_overlay3"></div>
@@ -56,7 +57,8 @@
  {% endblock %}
 
 {% block menu_icon_dropdown %}
-	<li><a href = "javascript:void(0)" onclick = "document.getElementById('light3').style.display='flex';document.getElementById('fade3').style.display='flex'">Add Faculty</a></li>
+<!--	<li><a href = "javascript:void(0)" onclick = "document.getElementById('light3').style.display='flex';document.getElementById('fade3').style.display='flex'">Add Faculty</a></li>-->
+	<li><a href="{% url 'manage_faculty' %}" >Manage Faculty</a></li>
 	<li class="divider"></li>
 	<li><a href="{% url 'manage_dcompany' %}" >Manage Dummy Company</a></li>
 {% endblock %}
@@ -78,33 +80,27 @@
 {% endblock %}
 
 {% block side_nav_links %}
-    <li><a class="waves-effect" href="#!"><i class="fa fa-building" aria-hidden="true"></i>
+    <li data-main_div="#associate"><a class="waves-effect" href="#!"><i class="fa fa-building" aria-hidden="true"></i>
           Associate Companies</a></li>
-    <li><a class="waves-effect" href="#!"><i class="fa fa-envelope" aria-hidden="true"></i> 
+    <li data-main_div="#requests"><a class="waves-effect" href="#!"><i class="fa fa-envelope" aria-hidden="true"></i> 
           Association Requests</a></li>
-    <li><a class="waves-effect" href="#!"><i class="fa fa-bell" aria-hidden="true"></i>Notifications</a></li>     
-    <li><a class="waves-effect" href="#!"><i class="fa fa-clock-o" aria-hidden="true"></i>
-            Sessions</a></li>
+    <li data-main_div="#notifications"><a class="waves-effect" href="#!"><i class="fa fa-bell" aria-hidden="true"></i>Notifications</a></li>     
+    <li data-main_div="#sessions"><a class="waves-effect" href="#!"><i class="fa fa-clock-o" aria-hidden="true"></i>Sessions</a></li>
     
-    <li class="no-padding">
-        <ul class="collapsible collapsible-accordion">
-          <li>
-            <a class="collapsible-header"><i class="fa fa-cog" aria-hidden="true"></i>
-            Settings</a>
-            <div class="collapsible-body">
-              <ul>
-                <li><a href="#!"><i class="fa fa-sliders" aria-hidden="true"></i>
-                    Account Settings</a></li>
-                    <li><a href="#!"><i class="fa fa-wrench" aria-hidden="true"></i>
-                   Profile Settings</a></li>
-                <li><a href="#!"><i class="fa fa-users" aria-hidden="true"></i>
-                      Social Profile Settings</a></li>
-                
-              </ul>
-            </div>
-          </li>
-        </ul>
-      </li>
+	<li class="no-padding">
+		<ul class="collapsible collapsible-accordion">
+			<li data-main_div="#settings" class="expandable">
+				<a class="collapsible-header"><i class="fa fa-cog" aria-hidden="true"></i>Settings</a>
+				<div class="collapsible-body">
+					<ul>
+						<li class="child-li" data-child_div="#account-settings"><a href="#!"><i class="fa fa-sliders" aria-hidden="true"></i>Account Settings</a></li>
+						<li class="child-li" data-child_div="#profile-settings"><a href="#!"><i class="fa fa-wrench" aria-hidden="true"></i>Profile Settings</a></li>
+						<li class="child-li" data-child_div="#social-settings"><a href="#!"><i class="fa fa-users" aria-hidden="true"></i>Social Profile Settings</a></li>
+					</ul>
+				</div>
+			</li>
+		</ul>
+	</li>
 {% endblock %}
 
 {% block tabs%}
@@ -117,7 +113,7 @@
 
 {% block tabs_content %}
 	<div id="associate" class="col s12">
-		<form method="POST" action={% url 'associate' %} id="associate-form" class="col s8 offset-s2">
+		<form method="POST" action={% url 'associate' %} id="associate-form" class="col s12 m8 offset-m2">
 			{% csrf_token %}
 			{% form form=association_form%}{% endform %}
 			<div class="col s8 offset-s2">
@@ -151,7 +147,6 @@
 				</div>
 			</div>
 		</div>
-	</div>
 	
 	<!-- -->
 	<div id="settings" class="col s12">
@@ -169,7 +164,9 @@
 						<form method="POST" action="{% url 'edit_account' %}" id="edit-account-form">
 							{% csrf_token %}
 							{% form form=edit_account_form %}{% endform %}
-							<button class="btn btn-waves" type="submit">Update Account</button>
+							<div class="row center">
+								<button class="btn waves-effect waves-light-right" style="width: 80%" type="submit">Update Account</button>
+							</div>
 						</form>
 					</div>
 					<div id="profile-settings" class="col s12">
@@ -205,6 +202,7 @@
 	<script type="text/javascript" src="{% static 'recruitment/associate.js' %}"></script>
 	<script type="text/javascript" src="{% static 'recruitment/requests.js' %}"></script>
 	<script type="text/javascript" src="{% static 'common/mobile.js' %}"></script>
+	<script src="{% static 'sweetalert/dist/sweetalert.min.js' %}"></script>
 	<script>
 		$(document).ready(function() {
 			Search.init();
