--- a/ipu/templates/college/mysessions.html
+++ b/ipu/templates/college/mysessions.html
@@ -23,6 +23,7 @@
 					</p>
 					<span class="secondary-content">
 						<a href="{% url 'manage_session' session.sess_hashid %}"><i class="fa fa-2x fa-cogs"></i></a>
+						<a href="{% url 'notify_session' session.sess_hashid %}" class="envelope"><i class="fa fa-2x fa-envelope"></i></a>
 						<a href="{% url 'excel' session.sess_hashid %}" class="excel"><i class="fa fa-2x fa-file-excel-o"></i></a>
 					</span>
 				</li>
@@ -47,8 +48,8 @@
 							{{ dsession.students }} student{{ dsession.students|pluralize }} in the session
 					</p>
 					<span class="secondary-content">
-	<!--					<a href="{% url 'edit_dsession' dsession.dsess_hashid %}"><i class="fa fa-2x fa-pencil"></i></a>-->
-	<!--					<a href="{# url 'edit_criteria' dsession.dsess_hashid #}"><i class="fa fa-2x fa-list-ol"></i></a>-->
+						<a href="{% url 'manage_dsession' dsession.dsess_hashid %}"><i class="fa fa-2x fa-cogs"></i></a>
+						<a href="{% url 'notify_dsession' dsession.dsess_hashid %}" class="envelope"><i class="fa fa-2x fa-envelope"></i></a>
 						<a href="{% url 'dexcel' dsession.dsess_hashid %}" class="excel"><i class="fa fa-2x fa-file-excel-o"></i></a>
 					</span>
 				</li>
