--- a/ipu/templates/recruitment/associate.html
+++ b/ipu/templates/recruitment/associate.html
@@ -4,7 +4,7 @@
 <script src="{% static 'material/js/jquery-2.2.0.js' %}"></script>
 {% include 'material/includes/material_js.html' %}
 -->
-<form action="{% url 'associate' %}" method='POST' id="associate-form" class="col s8 offset-s2">
+<form action="{% url 'associate' %}" method='POST' id="associate-form" class="col s12 m8 offset-m2">
 	{% csrf_token %}
 	{% form form=ass_form %}{% endform %}
 	<div class="row">
