--- a/ipu/static/account/css/intro.css
+++ b/ipu/static/account/css/intro.css
@@ -16,6 +16,27 @@ html, body, .block {
         z-index: 654654656515;
       }
 
+      #corner-button2
+    {
+    position: fixed;
+    line-height: 54px;
+    font-size: 15px;
+    padding: 1px;
+    padding-bottom: 5px;
+    top: 6px;
+    right: 2px;
+    width: 170px;
+    height: 54px;
+    z-index: 50285154165;
+    background-color: #337ab7;
+    }
+
+    #icon-college
+    {
+      height: 100px;
+      width: 120px;
+    }
+
       #data
       {
         display: flex;
@@ -31,6 +52,14 @@ html, body, .block {
         font-weight: bold;
         font-size: 17px;
         list-style-type: disc
+      }
+
+      #data p
+      {
+        padding: 10px;
+        padding-top: 2px;
+        font-size: 20px; 
+        padding-bottom: 0px;
       }
 
        #data-img
@@ -75,3 +104,112 @@ html, body, .block {
         font-size: 20px;
         font-family: "Arial"
       }
+
+      #red p
+      {
+        padding: 10px;
+        padding-top: 2px;
+        font-size: 20px; 
+        margin-top: 10px;
+      }
+
+      #green p
+      {
+        padding: 10px;
+        padding-top: 2px;
+        font-size: 20px; 
+        margin-top: 10px;
+      }
+
+@media (min-width:300px) and (max-width:992px) and (orientation: portrait){
+
+   #img-line img
+   {
+      width: 100%;
+   }   
+
+    #icon-college
+    {
+      height: 150px;
+      width: 170px;
+    }
+
+   #data p
+      {
+        padding: 10px;
+        padding-top: 2px;
+        font-size: 30px; 
+        padding-bottom: 0px;
+      }
+   #data ul li
+      {
+        margin-top: 5px;
+        font-weight: bold;
+        font-size: 30px;
+        list-style-type: disc
+      }
+
+   #red p
+      {
+        padding: 10px;
+        padding-top: 2px;
+        font-size: 35px; 
+        margin-top: 10px;
+      }      
+   #green p
+      {
+        padding: 10px;
+        padding-top: 2px;
+        font-size: 35px; 
+        margin-top: 10px;
+      }   
+
+
+}
+
+@media (min-width:300px) and (max-width:992px) and (orientation: landscape){
+
+   #img-line img
+   {
+      width: 100%;
+      height: 90%;
+   }   
+
+    #icon-college
+    {
+      height: 70px;
+      width: 85px;
+    }
+
+   #data p
+      {
+        padding: 10px;
+        padding-top: 2px;
+        font-size: 14px; 
+        padding-bottom: 0px;
+      }
+   #data ul li
+      {
+        margin-top: 1px;
+        font-weight: bold;
+        font-size: 12px;
+        list-style-type: disc
+      }
+
+   #red p
+      {
+        padding: 10px;
+        padding-top: 2px;
+        font-size: 10px; 
+        margin-top: 2px;
+      }      
+   #green p
+      {
+        padding: 10px;
+        padding-top: 2px;
+        font-size: 15px; 
+        margin-top: 5px;
+      }   
+
+
+}      
