--- a/ipu/static/account/css/procedures.css
+++ b/ipu/static/account/css/procedures.css
@@ -2,6 +2,14 @@ html
 {
 	background:white;
 }
+
+nav
+{
+	  height: 64px;
+    padding-top: 2px;
+    background-color: #1a237e !important;
+    padding-left: 5px;
+}
 #main-box
 {
 	display: flex;
@@ -18,11 +26,31 @@ html
 
 }
 
+#corner-button
+{
+    position: fixed;
+    line-height: 54px;
+    font-size: 15px;
+    padding: 1px;
+    padding-bottom: 5px;
+    top: 6px;
+    right: 2px;
+    width: 170px;
+    height: 54px;
+    z-index: 50285154165;
+}
+
 #main-box h4
 {
 	color: black;
 	font-size: 25px;
 	font-weight:bold;
+}
+
+nav .brand-logo { 
+    font-family: "Times New Roman"; /* New */
+    text-transform: capitalize; /* New */
+  font-size: 1.6rem;
 }
 
 #steps
@@ -55,6 +83,37 @@ html
 	color: #404040;
 }
 
+#logo
+{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
+#inner-logo h4
+{
+  font-size:21px;
+  margin-bottom: 1px;
+  font-family: "Times New Roman";
+  text-transform: capitalize;
+}
+
+#inner-logo h6
+{
+  
+  font-size: 14px;
+  margin-top: 1px;
+  font-family: "Times New Roman";
+  text-transform: capitalize;
+}
+
+
+#brand-corner:hover
+{
+  cursor: pointer;
+}
+
 @media (min-width:300px) and (max-width:992px) and (orientation: portrait){
 
    .step p
@@ -62,9 +121,67 @@ html
    	font-size: 25px;
    }
 
-   #main-box h4
+#logo
 {
-	color: black;
-	font-size: 35px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
+
+#main-box h4
+{
+  color: black;
+  font-size: 35px;
+}
+
+#brand-corner:hover
+{
+  cursor: pointer;
+}
+
+nav .brand-logo { 
+    font-family: "Times New Roman"; /* New */
+    text-transform: capitalize; /* New */
+  font-size: 1.6rem;
+}
+
+nav
+{
+    height: 110px;
+    padding-top: 20px;
+    background-color: #1a237e !important;
+    padding-left: 5px;
+}
+#corner-button
+{
+    position: fixed;
+    line-height: 75px;
+    font-size: 20px;
+    padding: 1px;
+    padding-bottom: 5px;
+    top: 20px;
+    right: 5px;
+    width: 210px;
+    height: 75px;
+    z-index: 50285154165;
+}
+
+#inner-logo h4
+{
+  font-size:30px;
+  margin-bottom: 1px;
+  font-family: "Times New Roman";
+  text-transform: capitalize;
+}
+
+#inner-logo h6
+{
+  
+  font-size: 16px;
+  margin-top: 1px;
+  font-family: "Times New Roman";
+  text-transform: capitalize;
+}
+
+
 }
