--- a/ipu/static/account/css/stats.css
+++ b/ipu/static/account/css/stats.css
@@ -11,7 +11,28 @@ html
 	align-items: center;
 }
 
-h4
+nav
+{
+	height: 64px;
+    padding-top: 2px;
+    background-color: #1a237e !important;
+    padding-left: 5px;
+}
+#corner-button
+{
+    position: fixed;
+    line-height: 54px;
+    font-size: 15px;
+    padding: 1px;
+    padding-bottom: 5px;
+    top: 6px;
+    right: 2px;
+    width: 170px;
+    height: 54px;
+    z-index: 50285154165;
+}
+
+#heading h4
 {
 	color: #1c262f;
 
@@ -35,4 +56,191 @@ p
 #images img
 {
 	margin: 10px;
+}
+
+#logo
+{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
+#inner-logo h4
+{
+  font-size:21px;
+  margin-bottom: 1px;
+  font-family: "Times New Roman";
+  text-transform: capitalize;
+}
+
+#inner-logo h6
+{
+  
+  font-size: 14px;
+  margin-top: 1px;
+  font-family: "Times New Roman";
+  text-transform: capitalize;
+}
+
+
+#brand-corner:hover
+{
+  cursor: pointer;
+}
+
+nav .brand-logo { 
+    font-family: "Times New Roman"; /* New */
+    text-transform: capitalize; /* New */
+  font-size: 1.6rem;
+}
+
+@media (min-width: 300px) and (max-width: 992px) and (orientation: portrait){
+
+  #images
+{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 40px;
+}
+
+#images img
+{
+  margin: 20px;
+}
+
+p
+{
+  color: red;
+  margin-left: 10px;
+  font-size: 20px;
+}
+
+#heading
+{
+  margin-top: 60px;
+}
+
+#heading h4
+{
+  color: #1c262f;
+  font-size: 45px;
+
+}
+
+nav
+{
+    height: 110px;
+    padding-top: 20px;
+    background-color: #1a237e !important;
+    padding-left: 5px;
+}
+#corner-button
+{
+    position: fixed;
+    line-height: 75px;
+    font-size: 20px;
+    padding: 1px;
+    padding-bottom: 5px;
+    top: 20px;
+    right: 5px;
+    width: 210px;
+    height: 75px;
+    z-index: 50285154165;
+}
+
+#inner-logo h4
+{
+  font-size:30px;
+  margin-bottom: 1px;
+  font-family: "Times New Roman";
+  text-transform: capitalize;
+}
+
+#inner-logo h6
+{
+  
+  font-size: 16px;
+  margin-top: 1px;
+  font-family: "Times New Roman";
+  text-transform: capitalize;
+}
+
+}
+
+@media (min-width: 300px) and (max-width: 992px) and (orientation: landscape){
+
+  #images
+{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 40px;
+}
+
+#images img
+{
+  margin: 20px;
+}
+
+p
+{
+  color: red;
+  margin-left: 10px;
+  font-size: 20px;
+}
+
+#heading
+{
+  margin-top: 60px;
+}
+
+#heading h4
+{
+  color: #1c262f;
+  font-size: 45px;
+
+}
+
+nav
+{
+    height: 110px;
+    padding-top: 20px;
+    background-color: #1a237e !important;
+    padding-left: 5px;
+}
+#corner-button
+{
+    position: fixed;
+    line-height: 75px;
+    font-size: 20px;
+    padding: 1px;
+    padding-bottom: 5px;
+    top: 20px;
+    right: 5px;
+    width: 210px;
+    height: 75px;
+    z-index: 50285154165;
+}
+
+#inner-logo h4
+{
+  font-size:30px;
+  margin-bottom: 1px;
+  font-family: "Times New Roman";
+  text-transform: capitalize;
+}
+
+#inner-logo h6
+{
+  
+  font-size: 16px;
+  margin-top: 1px;
+  font-family: "Times New Roman";
+  text-transform: capitalize;
+}
+
 }
