--- a/ipu/templates/account/nav-landing.html
+++ b/ipu/templates/account/nav-landing.html
@@ -7,28 +7,35 @@
 {% block head %}
 	<link type="text/css" rel="stylesheet" href="{% static 'common/css/font-awesome/css/font-awesome.min.css' %}" />
 	<link type="text/css" rel="stylesheet" href="{% static 'materialize-blue.css' %}" />
-	<link type="text/css" rel="stylesheet" href="{% static 'account/css/landing.css' %}" />
+	<link type="text/css" rel="stylesheet" href="{% static 'account/css/nav-landing.css' %}" />
 {% endblock %}
 
 {% block header %}
 <div class="navbar-fixed">
     <nav>
       <div class="nav-wrapper">
-        <a href="#!" class="brand-logo center hide-on-med-and-down">Training & Placement Cell</a>
-        <a href="#!" class="brand-logo left hide-on-large-only">Training & Placement Cell</a>
-        <ul class="left hide-on-large-only" style="margin-left: 600px;">
-          <li><a href="{% url 'landing' %}"><i class="fa fa-arrow-left fa-3x" aria-hidden="true"></i>
+        <a class="brand-logo" id="brand-corner">
+                    <div class="left" style="margin-left: 1.5%;">
+                      <div id="logo">
+                        <img src="{% static 'images/ipu-logo.png' %}" style="height: 55px">
+                        <div id="inner-logo">
+                        <h4>Training & Placement cell</h4>
+                        <h6>Guru Gobind Singh Indraprastha University</h6> 
+                        </div>
+                      </div>
+                    </div>
+        </a>
+        <ul class="left">
+          <li class="hide-on-med-and-down"><a style="line-height: 64px;height: 64px;" href="{% url 'landing' %}"><i class="fa fa-arrow-left fa-2x" aria-hidden="true"></i>
             </a>
           </li>
-        </ul>
-        <ul class="left hide-on-med-and-down">
-          <li><a href="{% url 'landing' %}"><i class="fa fa-arrow-left fa-2x" aria-hidden="true"></i>
+          <li class="hide-on-large-only"><a style="line-height: 64px;height: 64px;" href="{% url 'landing' %}"><i class="fa fa-arrow-left fa-4x" aria-hidden="true"></i>
             </a>
           </li>
         </ul>
       </div>
     </nav>
-  </div>
+</div>
 
   
 {% endblock header %}
