--- a/ipu/templates/college/association_requests.html
+++ b/ipu/templates/college/association_requests.html
@@ -2,21 +2,22 @@
 <!-- {# <script src="{% static 'material/js/jquery-2.2.0.js' %}"></script>
 {% include 'material/includes/material_js.html' %}
 #}-->
+<style type="text/css">
+	
+</style>
 <div class="container">
 	<div class="col s8 offset-s2 request-content">
 		{% for ass in associations %}
-			<div class="col s12 card-panel blue-grey darken-1">
+			<div class="col s12 card-panel blue-grey darken-1" style="padding: 10px;text-align: center;">
 				<div class="card-content white-text">
-					<span class="card-title">Association Request</span>
+					<span class="card-title" style="color: coral;font-size: 20px;">Association Request</span>
 					<p> {{ ass.obj }} </p>
 					<p> {{ ass.obj.salary }} </p>
 				</div>
-				<hr />
-				<div class="card-action yellow-text">
-					<a href=" {{ ass.url.session_url }} ">Accept</a>
-					<a href=" {{ ass.url.dissoci_url }} ">Decline</a>
+				<div class="card-action">
+					<a class="waves-effect waves-light btn" href=" {{ ass.url.session_url }} ">Accept</a>
+					<a class="waves-effect waves-light btn" href=" {{ ass.url.dissoci_url }} ">Decline</a>
 				</div>
-				<hr />
 			</div>
 			{% empty %}
 				<b><h1 class="center flow-text teal-text text-accent-4">No requests at the moment.</h1></b>
